tests/ui/endpoint/wants_auth_non_bool.stderr
error: Expected boolean literal
 --> tests/ui/endpoint/wants_auth_non_bool.rs:8:25
  |
8 | #[read_all(wants_auth = "yes, please")]
  |                         ^^^^^^^^^^^^^
